--- a/it/sem1/books/app.html
+++ b/it/sem1/books/app.html
@@ -19,7 +19,7 @@
                 <i class="fa-solid fa-arrow-left fa-lg"></i>
             </a>
             <a href="/index.html">
-                <img class="headerimg" src="/assets/pics/bg.png" alt="Logo" srcset="">
+                <img class="headerimg" src="/assets/bg.png" alt="Logo" srcset="">
 
             </a>
             <i class="fa-solid fa-sun-bright"></i>
@@ -29,8 +29,8 @@
     <div class="main">
         <h1 class="mainheader">Study Material for Information Technology </h1>
         <div class="row">
-            <a href="http://127.0.0.1:5500/assets/pics/001.png" target="_blank">
-                <img class="maincontentimg" src="/assets/pics/001.png" alt="" srcset="">
+            <a href="http://127.0.0.1:5500/assets/001.png" target="_blank">
+                <img class="maincontentimg" src="/assets/001.png" alt="" srcset="">
             </a>
 
             <div class="design"></div>
@@ -70,7 +70,7 @@
         <a href="">
             <div class="reccontent">
                 <div class="img">
-                    <img class="recimg" src="/assets/pics/002.png" alt="" srcset="">
+                    <img class="recimg" src="/assets/002.png" alt="" srcset="">
 
                 </div>
                 <span class="recbookname">Basic Computer Programming </span>
@@ -80,14 +80,14 @@
         </a>
         <a href="">
             <div class="reccontent">
-                <img class="recimg" src="/assets/pics/003.png" alt="" srcset="">
+                <img class="recimg" src="/assets/003.png" alt="" srcset="">
                 <span class="recbookname">Basic Computer Programming </span>
                 <input class="recopenbtn" type="button" value="Open >">
             </div>
         </a>
         <a href="">
             <div class="reccontent">
-                <img class="recimg" src="/assets/pics/004.png" alt="" srcset="">
+                <img class="recimg" src="/assets/004.png" alt="" srcset="">
                 <span class="recbookname">Basic Computer Programming </span>
                 <input class="recopenbtn" type="button" value="Open >">
 
@@ -95,7 +95,7 @@
         </a>
         <a href="">
             <div class="reccontent">
-                <img class="recimg" src="/assets/pics/005.png" alt="" srcset="">
+                <img class="recimg" src="/assets/005.png" alt="" srcset="">
                 <span class="recbookname">Basic Computer Programming </span>
                 <input class="recopenbtn" type="button" value="Open >">
 
