--- a/it/sem1/sem1it.html
+++ b/it/sem1/sem1it.html
@@ -16,7 +16,7 @@
         <div id="appbar">
 
             <i class="fa-solid fa-bars fa-lg"></i>
-            <img class="headerimg" src="/assets/pics/bg.png" alt="Logo" srcset="">
+            <img class="headerimg" src="/assets/bg.png" alt="Logo" srcset="">
             <i class="fa-solid fa-sun-bright"></i>
 
         </div>
@@ -29,7 +29,7 @@
             <div class="card" id="cardmobile">
 
                 <div>
-                    <img class="contentimg" src="/assets/pics/001.png" alt="" srcset="">
+                    <img class="contentimg" src="/assets/001.png" alt="" srcset="">
 
                 </div>
                 <div class="cloumn">
@@ -44,7 +44,7 @@
             <div class="card" id="cardmobile">
 
                 <div>
-                    <img class="contentimg" src="/assets/pics/002.png" alt="" srcset="">
+                    <img class="contentimg" src="/assets/002.png" alt="" srcset="">
 
                 </div>
                 <div class="cloumn">
@@ -59,7 +59,7 @@
             <div class="card" id="cardmobile">
 
                 <div>
-                    <img class="contentimg" src="/assets/pics/003.png" alt="" srcset="">
+                    <img class="contentimg" src="/assets/003.png" alt="" srcset="">
 
                 </div>
                 <div class="cloumn">
@@ -74,7 +74,7 @@
             <div class="card" id="cardmobile">
 
                 <div>
-                    <img class="contentimg" src="/assets/pics/004.png" alt="" srcset="">
+                    <img class="contentimg" src="/assets/004.png" alt="" srcset="">
 
                 </div>
                 <div class="cloumn">
@@ -94,7 +94,7 @@
 
 
                 <div>
-                    <img class="contentimg" src="/assets/pics/001.png" alt="python Image" srcset="">
+                    <img class="contentimg" src="/assets/001.png" alt="python Image" srcset="">
                 </div>
                 <div class="column">
                     <span class="contenthead">Advance Python Programming</span>
