--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="appbar">
 
         <h3>Select All Fields</h3>
-        <a href="/it/sem1/sem1it.html">I.T</a>
+        <a href="/sem1it.html">I.T</a>
 
     </div>
     <div class="wrap">
