--- a/sem1it.html
+++ b/sem1it.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diploma I.T Sem-1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleit1.css">
     <script src="https://kit.fontawesome.com/8500bd12c5.js" crossorigin="anonymous"></script>
 </head>
 
