--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="card" id="cardmobile">
         
                 <div>
-                    <img class="contentimg" src="/assets/001.png" alt="" srcset="">
+                    <img class="contentimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="" srcset="">
         
                 </div>
                 <div class="cloumn">
