--- a/app.html
+++ b/app.html
@@ -19,7 +19,7 @@
                 <i class="fa-solid fa-arrow-left fa-lg"></i>
             </a>
             <a href="/index.html">
-                <img class="headerimg" src="/assets/bg.png" alt="Logo" srcset="">
+                <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
 
             </a>
             <i class="fa-solid fa-sun-bright"></i>
@@ -29,7 +29,7 @@
     <div class="main">
         <h1 class="mainheader">Study Material for Information Technology </h1>
         <div class="row">
-            <a href="http://127.0.0.1:5500/assets/001.png" target="_blank">
+            <a href="https://neo2708.github.io/pic.github.io/001.png" target="_blank">
                 <img class="maincontentimg" src="/assets/001.png" alt="" srcset="">
             </a>
 
