--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 
 <head>
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="content-language" content="en">
+    <meta name="keywords" content="Gtu books free download , Gtu diploma books download , download gtu diploma , it">
     <meta charset="UTF-8">
-    <meta name="description" content="Get GTU Diploma Books PDF for Free">
+    <meta name="audience" content="Everyone">
+    <meta name="description"
+        content="Get GTU Diploma All Branch Books PDF for Free, Advance Python Programming,Sem-2, Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
+        crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
     <script src="https://kit.fontawesome.com/8500bd12c5.js" crossorigin="anonymous"></script>
@@ -36,9 +43,8 @@
 
             height: 7vh;
             display: flex;
-            /* justify-content: center; */
+            justify-content: center;
             align-items: center;
-            justify-content: space-between;
             padding: 10px;
         }
 
@@ -312,19 +318,18 @@
     </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
         crossorigin="anonymous"></script>
-    <title>Advance Python Programming</title>
+    <title>Advance Python Programming Download for Free </title>
 </head>
 
 <body>
     <nav>
         <div id="appbar">
-            <a href="/sem1it.html">
+            <!-- <a href="/sem1it.html">
                 <i class="fa-solid fa-arrow-left fa-lg"></i>
-            </a>
-            <a href="/index.html">
+            </a> -->
+            <a href="/public/index.html">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
             </a>
-            <i class="fa-solid fa-sun-bright"></i>
     </nav>
 
 
