--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <title>KhudKibook</title>
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
     <link rel="stylesheet" href="styleit1.css">
+    <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="index.css">
     <script>
         fetch("data.json").then(response => response.json()).then(data => {
@@ -25,7 +26,7 @@
             document.querySelector(".cph").innerText = data.cp[0].hcp;
 
         })
-        </script>
+</script>
 
 </head>
 
@@ -52,35 +53,77 @@
     </div>
     <div class="all">
         <div class="it">
+            <img class="itimg" src="https://cdn-icons-png.flaticon.com/512/2387/2387667.png" alt="">
+
             <div class="ith">
                 <h1></h1>
 
             </div>
             <!-- <img class="itimg" src="it.png" alt=""> -->
+        </div>
+        <div class="civil">
+            <img class="itimg" src="https://cdn-icons-png.flaticon.com/512/609/609034.png" alt="">
+            <div class="cvh">
+                <h1></h1>
             </div>
-            <div class="civil">
-                <div class="cvh">
-                    <h1></h1>
-                </div>
             </div>
             <div class="electrical">
-                <div class="elh">
-                    <h1></h1>
-                </div>
+            <img src="https://cdn-icons-png.flaticon.com/512/2907/2907301.png" alt="" class="itimg">
+            <div class="elh">
+                <h1></h1>
+            </div>
             </div>
             <div class="mechanical">
-                <div class="meh">
-                    <h1></h1>
-                </div>
+            <img src="https://cdn-icons-png.flaticon.com/512/1995/1995450.png" alt="" class="itimg">
+            <div class="meh">
+                <h1></h1>
+            </div>
             </div>
             <div class="computer">
-                <div class="cph">
-                    <h1></h1>
-                </div>
+            <img src="https://cdn-icons-png.flaticon.com/512/186/186225.png" alt="" class="itimg">
+            <div class="cph">
+                <h1></h1>
             </div>
-        </div>
+            </div>
+            </div>
+    <h1 class="header1">Common Subject Sem-1</h1>
     <div class="commoncard">
-        <h1 class="header">Common Subject Sem-1 </h1>
+        <div class="english">
+            <a href="">
+                <img class="imgc" src="https://neo2708.github.io/pic.github.io/001.png" alt="">
+                <div class="column">
+                    <h1 class="csn">Advance Python Programming</h1>
+                    <h1 class="branch">All Branch</h1>
+                </div>
+            </a>
+        </div>
+        <div class="maths">
+            <a href="">
+                <img class="imgc" src="https://neo2708.github.io/pic.github.io/002.png" alt="">
+                <div class="column">
+                    <h1 class="csn">Advance Python Programming</h1>
+                    <h1 class="branch">All Branch</h1>
+                </div>
+            </a>
+        </div>
+        <div class="es">
+            <a href="">
+                <img class="imgc" src="https://neo2708.github.io/pic.github.io/003.png" alt="">
+                <div class="column">
+                    <h1 class="csn">Advance Python Programming</h1>
+                    <h1 class="branch">All Branch</h1>
+                </div>
+            </a>
+        </div>
+        <div class="mathsc">
+            <a href="">
+                <img class="imgc" src="https://neo2708.github.io/pic.github.io/004.png" alt="">
+                <div class="column">
+                    <h1 class="csn">Advance Python Programming</h1>
+                    <h1 class="branch">All Branch</h1>
+                </div>
+            </a>
+        </div>
 
     </div>
     <div class="commoncard2">
