--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
 
         })
 </script>
+    <!-- add -->
+    <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
 </head>
 
@@ -45,9 +47,15 @@
             <li>
                 <a href="">Account</a>
             </li>
-            <li><a href="">More books</a></li>
+            <li><a href="">More..</a></li>
     </nav>
     <h1 class="header">GTU Diploma Books and Study Material</h1>
+    <!-- Add -->
+    <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-4211827566541334" data-ad-slot="8202466290"
+        data-auto-format="rspv" data-full-width="">
+        <div overflow=""></div>
+    </amp-ad>
+    <!--  -->
     <div class="newcard">
         <h1 class="header">New </h1>
     </div>
@@ -66,33 +74,34 @@
             <div class="cvh">
                 <h1></h1>
             </div>
-            </div>
-            <div class="electrical">
+        </div>
+        <div class="electrical">
             <img src="https://cdn-icons-png.flaticon.com/512/2907/2907301.png" alt="" class="itimg">
             <div class="elh">
                 <h1></h1>
             </div>
-            </div>
-            <div class="mechanical">
+        </div>
+        <div class="mechanical">
             <img src="https://cdn-icons-png.flaticon.com/512/1995/1995450.png" alt="" class="itimg">
             <div class="meh">
                 <h1></h1>
             </div>
-            </div>
-            <div class="computer">
+        </div>
+        <div class="computer">
             <img src="https://cdn-icons-png.flaticon.com/512/186/186225.png" alt="" class="itimg">
             <div class="cph">
                 <h1></h1>
             </div>
-            </div>
-            </div>
+        </div>
+        </div>
+
     <h1 class="header1">Common Subject Sem-1</h1>
     <div class="commoncard">
         <div class="english">
             <a href="">
                 <img class="imgc" src="https://neo2708.github.io/pic.github.io/001.png" alt="">
                 <div class="column">
-                    <h1 class="csn">Advance Python Programming</h1>
+                    <h1 class="csn">English</h1>
                     <h1 class="branch">All Branch</h1>
                 </div>
             </a>
@@ -101,33 +110,50 @@
             <a href="">
                 <img class="imgc" src="https://neo2708.github.io/pic.github.io/002.png" alt="">
                 <div class="column">
-                    <h1 class="csn">Advance Python Programming</h1>
+                    <h1 class="csn">Mathematics</h1>
                     <h1 class="branch">All Branch</h1>
                 </div>
             </a>
         </div>
         <div class="es">
             <a href="">
+                <img class="imgc" src="https://neo2708.github.io/pic.github.io/005.png" alt="">
+                <div class="column">
+                    <span class="csn">E.S</span>
+                    <h1 class="branch">All Branch</h1>
+                </div>
+            </a>
+        </div>
+    </div>
+    <h1 class="header1"> Common Subject Sem-2 </h1>
+    <div class="commoncard2">
+        <div class="maths2">
+            <a href="">
+                <img class="imgc" src="https://neo2708.github.io/pic.github.io/006.png" alt="">
+                <div class="column">
+                    <h1 class="csn">Maths</h1>
+                    <h1 class="branch">I.T | Computer | Electrical</h1>
+                    </div>
+                    </a>
+                    </div>
+                    <div class="maths">
+                        <a href="">
+                            <img class="imgc" src="https://neo2708.github.io/pic.github.io/007.png" alt="Maths book image">
+                            <div class="column">
+                                <h1 class="csn">Mathematics</h1>
+                                <h1 class="branch">Civil | Mechanical</h1>
+                </div>
+            </a>
+        </div>
+        <div class="ap">
+            <a href="">
                 <img class="imgc" src="https://neo2708.github.io/pic.github.io/003.png" alt="">
                 <div class="column">
-                    <h1 class="csn">Advance Python Programming</h1>
-                    <h1 class="branch">All Branch</h1>
+                    <span class="csn">Applied Physics </span>
+                    <h1 class="branch">I.T | Computer | Electrical</h1>
                 </div>
             </a>
-        </div>
-        <div class="mathsc">
-            <a href="">
-                <img class="imgc" src="https://neo2708.github.io/pic.github.io/004.png" alt="">
-                <div class="column">
-                    <h1 class="csn">Advance Python Programming</h1>
-                    <h1 class="branch">All Branch</h1>
-                </div>
-            </a>
-        </div>
-
-    </div>
-    <div class="commoncard2">
-        <h1 class="header"> Common Subject Sem-2 </h1>
+            </div>
     </div>
 </body>
 
