--- a/public/index.html
+++ b/public/index.html
@@ -38,16 +38,19 @@
             <a href="/public/index.html">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
             </a>
+            <div class="home">
+                <li>
+                    <a class="home"  href="">Home</a>
+                </li>
+            </div>
+            
             <li>
-                <a href="">Home</a>
+                <a class="brancha" href="">Branch</a>
             </li>
             <li>
-                <a href="">Branch</a>
+                <a class="account" href="">Account</a>
             </li>
-            <li>
-                <a href="">Account</a>
-            </li>
-            <li><a href="">More..</a></li>
+            <li><a class="more" href="">More..</a></li>
     </nav>
     <h1 class="header">GTU Diploma Books and Study Material</h1>
     <!-- Add -->
