--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta name="robots" content="index, follow">
     <meta http-equiv="content-language" content="en">
+    <meta name="robots" content="index, follow">
     <meta name="keywords" content="Gtu books free download , Gtu diploma books download , download gtu diploma , it">
-    <meta charset="UTF-8">
     <meta name="audience" content="Everyone">
     <meta name="description" content="Get GTU Diploma All Branch Books PDF for Free ,Sem-2, Diploma Engineering">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KhudKibook</title>
@@ -62,7 +62,7 @@
             </div> -->
 
     </nav>
-    <h1 class="header">GTU Diploma Books and Study Material</h1>
+    <h1 class="header">GTU Diploma Books & Study Material</h1>
 
     <!-- <div class="slider">
         <div class="slide active">
@@ -188,7 +188,7 @@
             <a href="">
                 <img class="imgc" src="https://neo2708.github.io/pic.github.io/003.png" alt="">
                 <div class="column">
-                    <span class="csn">Applied Physics </span>
+                    <span class="csn">Applied <br> Physics </span>
                     <h1 class="branch">I.T | Computer | Electrical</h1>
                 </div>
             </a>
@@ -247,29 +247,7 @@
         repeat();
     </script> -->
     <hr>
-    <!-- About Us  -->
-    <!-- <div id="scroll" class="aboutusc">
-        <h1 style="text-align: center;" >About Us</h1>
-        <br>
-        <div class="ah">
-            <h1 class="ahm">khudkibook</h1>
-            <img class="auci" src="/mobile-map-and-navigation.png" alt="" srcset="">
-        </div>
-        <h1 class="ahmc">
-            Who Are WE?
-        </h1>
-        <p class="ahmwh" >
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi incidunt commodi velit nam suscipit unde! Iure deleniti, dignissimos, doloribus doloremque illo sit modi mollitia quae beatae ipsa obcaecati asperiores repudiandae animi pariatur corrupti, accusantium similique sequi quaerat voluptatum. Libero sed debitis fugiat ut itaque tempore perspiciatis hic sunt modi harum.
-        </p>
-        <br><br>
-        <h1 class="ahmc">
-            What We Do?
-        </h1>
-        <p class="ahmwh" >
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi incidunt commodi velit nam suscipit unde! Iure deleniti, dignissimos, doloribus doloremque illo sit modi mollitia quae beatae ipsa obcaecati asperiores repudiandae animi pariatur corrupti, accusantium similique sequi quaerat voluptatum. Libero sed debitis fugiat ut itaque tempore perspiciatis hic sunt modi harum.
-                    </p>
-                    <br><br>
-    </div> -->
-</body>
+    <h1 class="foottext" >--- @KhudKibook ---</h1>
+  
 
 </html>
