--- a/public/it/itsys.html
+++ b/public/it/itsys.html
@@ -13,13 +13,13 @@
 <body>
     <nav>
         <div id="appbar">
-            <a href="https://khudkibook.web.app/">
+            <a href="/index.html">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
             </a>
             <!-- <div class="home">
                 <ul>
                     <li>
-                        <a class="home" href="https://khudkibook.web.app/">Home</a>
+                        <a class="home" href="/index.html">Home</a>
                     </li>
                 </ul>
 
@@ -43,16 +43,16 @@
     </nav>
     <!-- Cureent Book Info  -->
     <div class="main">
-        <h1 class="mainheader">Study Material for Information Technology </h1>
+        <h1 class="mainheader">Information Technology Study Material</h1>
         <div class="row">
-            <a href="" target="_blank">
+            <a href="https://neo2708.github.io/pic.github.io/007.png" target="_blank">
                 <img class="maincontentimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="Book Photo"
                     srcset="">
             </a>
 
             <div class="design"></div>
             <div class="cloumn">
-                <!-- <span class="mainheadtext">Download GTU Diploma Engineering book free </span> -->
+
                 <h1 class="maincontenthead">Introduction To IT System</h1>
                 <h1 class="mdesc">4311602</h1>
                 <h1 class="mdesc2">Credit-5</h1>
@@ -60,9 +60,6 @@
                     <a href="https://drive.google.com/uc?export=download&id=1D5Y7q1AGF_jPUdVVrjPx7ak7P767KMYL">
                         <input class="miandownloadbtn" type="button" value="Download Book">
                     </a>
-                    <!-- <a href="https://drive.google.com/uc?export=download&id=">
-                        <input class="miandownloadbtn" type="button" value="Practical">
-                    </a> -->
                     <a href="https://drive.google.com/uc?export=download&id=18JZjqy8Lm1GPFf1ypewxgEifrZ8cARUw">
                         <input class="miandownloadbtn" type="button" value="Syllabus">
 
@@ -104,7 +101,6 @@
         <!-- IT SYS* -->
         <!-- Current -->
         <div class="current">
-        <a href="">
             <div class="reccontent">
                 <div class="img">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="Introduction to IT System" srcset="">
@@ -117,10 +113,9 @@
                 </div>
 
             </div>
-        </a>
     </div>
         <!-- Maths -->
-        <a href="">
+        <a href="/public/it/maths.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
                 <div class="align">
@@ -134,7 +129,7 @@
             </div>
         </a>
         <!-- English -->
-        <a href="">
+        <a href="/public/it/english.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/014.png" alt="" srcset="">
                 <div class="align">
@@ -295,8 +290,8 @@
 </div>
 <!-- Footer -->
 
-<div class="footcover">
+
     <h1 class="foottext" >@KhudKibook</h1>
-</div>
+
 </body>
 </html>
