--- a/public/it/pythonprogramming.html
+++ b/public/it/pythonprogramming.html
@@ -3,9 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="gtu diploma sem 1 books download , 4311601 ,Python Programming download for free , it">
+    <meta name="audience" content="Everyone">
+    <meta name="description" content=" Python Programming Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTU-KhudKibook IT Diploma </title>
+    <title>IT Diploma Python Programming-KhudKibook </title>
     <meta name="description" content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
     <link rel="stylesheet" href="/public/it/pp.css">
 
@@ -17,42 +21,33 @@
 <body>
     <nav>
         <div id="appbar">
-            <a href="https://khudkibook.web.app/">
+            <a href="/index.html">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
-            </a>
-            <!-- <div class="home">
+            </a> 
+
+            <div class="home">
                 <ul>
                     <li>
-                        <a class="home" href="https://khudkibook.web.app/">Home</a>
+                        <a class="home" href="/public/index.html">Home</a>
                     </li>
                 </ul>
 
-            </div> -->
-<!-- 
+            </div>
+
             <ul>
                 <li>
-                    <a class="brancha" href="">Branch</a>
+                    <a class="branch" href="/public/it/index.html" >I.T</a>
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <a class="account" href="">Account</a>
-                </li>
-            </ul>
-            <ul>
-                <li><a class="more" href="">More..</a></li>
-            </ul> -->
-        </div>
         
     </nav>
     <!-- Cureent Book Info  -->
     <div class="main">
-        <h1 class="mainheader">Study Material for Information Technology </h1>
+        <h1 class="mainheader">Python Programming Study Material </h1>
         <div class="row">
-            <a href="" target="_blank">
                 <img class="maincontentimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="Book Photo"
                     srcset="">
-            </a>
+            
 
             <div class="design"></div>
             <div class="cloumn">
@@ -109,7 +104,7 @@
         </div>
         <!--  -->
         <!-- IT SYS -->
-        <a href="/public/it/itsys.html">
+        <a href="/public/it/public/itsys.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
                 <div class="align">
@@ -298,9 +293,8 @@
 </div>
 <!-- Footer -->
 
-<div class="footcover">
-    <h1 class="foottext" >@KhudKibook</h1>
-</div>
+<h1 class="foottext" >@KhudKibook</h1>
+
 </body>
 
 </html>
