--- a/public/it/maths.html
+++ b/public/it/maths.html
@@ -3,22 +3,30 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="gtu diploma sem 1 books download , 4300001 ,Mathematics download for free , it">
+    <meta name="audience" content="Everyone">
+    <meta name="description"
+        content=" Mathematics Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download I.T Diploma GTU books</title>
-    <link rel="stylesheet" href="/styleit1.css">
+    <title>IT Diploma Mathematics Sem-1 GTU-KhudKibook </title>
+    <meta name="description"
+        content="Download GTU Diploma Sem-1 Mathematics & All Book, Paper, Syllabus, and Practical at one place for free | 4300001 | GTU-KhudKibook">
+    <link rel="stylesheet" href="/public/it/pp.css">
+
     <link rel="icon" type="image/x-icon" href="https://neo2708.github.io/pic.github.io/bg.png">
 
-    <link rel="stylesheet" href="/public/it/index.css">
 
 </head>
 
 <body>
     <nav>
         <div id="appbar">
-            <a href="/public/index.html">
+            <a href="/index.html">
                 <img class="headerimg" src="https://neo2708.github.io/pic.github.io/bg.png" alt="Logo" srcset="">
             </a>
+
             <div class="home">
                 <ul>
                     <li>
@@ -30,34 +38,69 @@
 
             <ul>
                 <li>
-                    <a class="#" href="" style="text-decoration: 3px solid orange overline;">I.T</a>
+                    <a class="branch" href="/public/it/index.html">I.T</a>
                 </li>
             </ul>
 
     </nav>
-    <h1 class="header">GTU Diploma I.T</h1>
-    <!-- Content -->
-    <!-- Sem-1 -->
-    <h1 class="header1">Semester-1</h1>
-    <div class="recommian">
-        <!-- Python -->
-        <a href="/public/it/pythonprogramming.html">
-            <div class="reccontent">
-                <div class="img">
-                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="" srcset="">
-                </div>
-                <div class="align">
-                    <h1 class="recbookname">Python Programming </h1>
-                    <h1 class="desc2">4311601</h1>
-                    <h1 class="desc">Credit-5</h1>
-                    <input class="recopenbtn" type="button" value="Open >">
-                </div>
+    <!-- Cureent Book Info  -->
+    <div class="main">
+        <h1 class="mainheader">Mathematics Study Material </h1>
+        <div class="row">
+            <img class="maincontentimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="Book Photo"
+                srcset="">
 
+
+            <div class="design"></div>
+            <div class="cloumn">
+                <!-- <span class="mainheadtext">Download GTU Diploma Engineering book free </span> -->
+                <h1 class="maincontenthead">Mathematics</h1>
+                <h1 class="mdesc">4300001</h1>
+                <h1 class="mdesc2">Credit-4</h1>
+                <div>
+                    <a href="https://drive.google.com/uc?export=download&id=">
+                        <input class="miandownloadbtn" type="button" value="Download Book">
+                    </a>
+                    <a href="https://drive.google.com/uc?export=download&id=1NBi1aZWsMv2gDKQL9JuWhLLGnC9So5nX">
+                        <input class="miandownloadbtn" type="button" value="Syllabus">
+
+                    </a>
+                    <a href="">
+                        <input class="miandownloadbtn" type="button" value="Paper">
+
+                    </a>
+
+                </div>
 
             </div>
-        </a>
+        </div>
+        <hr>
+    </div>
+    <!-- Recommended -->
+    <h1 class="recmainheader">
+        Recommnded Acording to your Semester
+    </h1>
+    <div class="recommian">
+        <!-- Python -->
+
+        <div class="reccontent">
+            <div class="img">
+                <img class="recimg" src="https://neo2708.github.io/pic.github.io/013.png" alt="" srcset="">
+            </div>
+            <div class="align">
+                <h1 class="recbookname">Python Programming </h1>
+                <h1 class="desc2">4311601</h1>
+                <h1 class="desc">Credit-5</h1>
+                <input class="recopenbtn" type="button" value="Open >">
+            </div>
+
+
+
+
+        </div>
+        <!--  -->
         <!-- IT SYS -->
-        <a href="/public/it/itsys.html">
+        <a href="/public/it/public/itsys.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/007.png" alt="" srcset="">
                 <div class="align">
@@ -69,20 +112,23 @@
 
             </div>
         </a>
+        <!-- current -->
         <!-- Maths -->
-        <a href="/public/it/maths.html">
-            <div class="reccontent">
-                <img class="recimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
+        <div class="current">
+            <div class="img">
+                <div class="reccontent">
+                    <img class="recimg" src="https://neo2708.github.io/pic.github.io/008.png" alt="" srcset="">
+                </div>
                 <div class="align">
                     <h1 class="recbookname">Mathematics </h1>
                     <h1 class="desc2">4300001</h1>
                     <h1 class="desc">Credit-4</h1>
-                    <input class="recopenbtn" type="button" value="Open >">
+                    <input class="recopenbtn" type="button" value="Current">
                 </div>
 
 
             </div>
-        </a>
+        </div>
         <!-- English -->
         <a href="/public/it/english.html">
             <div class="reccontent">
@@ -98,11 +144,28 @@
             </div>
         </a>
     </div>
+    <hr>
+    <!-- Learn  -->
+    <h1 class="recmainheader">learn Python Before Your Friends</h1>
+    <div class="learn">
+        <div class="lcard">
+            <div class="align">
+
+                <div class="ccard">
+                    <h1 class="ccardc"></h1>
+                    <h1 class="ccardc2"></h1>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <hr>
+    <!-- Bottom nav -->
     <!-- Sem-2 -->
-    <h1 style="background-color: rgb(128, 128, 128,0.2);" class="header1">Semester-2</h1>
-    <div style="background-color: rgb(128, 128, 128,0.2);" class="recommian">
+    <h1 class="recmainheader">Semester-2</h1>
+    <div class="recommian">
         <!-- Advance Python -->
-        <a href="">
+        <a href="/public/it2/app.html">
             <div class="reccontent">
                 <div class="img">
                     <img class="recimg" src="https://neo2708.github.io/pic.github.io/001.png" alt="" srcset="">
@@ -119,7 +182,7 @@
             </div>
         </a>
         <!-- Maths 2 -->
-        <a href="">
+        <a href="/public/it2/emaths.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/022.png" alt="" srcset="">
                 <div class="align">
@@ -132,7 +195,7 @@
             </div>
         </a>
         <!--  Physics -->
-        <a href="">
+        <a href="/public/it2/physics.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
                 <div class="align">
@@ -146,7 +209,7 @@
             </div>
         </a>
         <!-- ES -->
-        <a href="">
+        <a href="/public/it2/es.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/005.png" alt="" srcset="">
                 <div class="align">
@@ -160,11 +223,12 @@
             </div>
         </a>
     </div>
+    <hr>
     <!-- Sem-3 -->
-    <h1 class="header1">Semester-3</h1>
+    <h1 class="recmainheader">Semester-3</h1>
     <div class="recommian">
         <!-- Data Structure with Python -->
-        <a href="">
+        <a href="/public/it3/dsp.html">
             <div class="reccontent">
                 <div class="img">
                     <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
@@ -181,7 +245,7 @@
             </div>
         </a>
         <!-- Database Management -->
-        <a href="">
+        <a href="/public/it3/dm.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="" srcset="">
                 <div class="align">
@@ -194,7 +258,7 @@
             </div>
         </a>
         <!--  Linux Operating System -->
-        <a href="">
+        <a href="/public/it3/linuxOS.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/na.webp" alt="Image Not Avilable"
                     srcset="">
@@ -209,7 +273,7 @@
             </div>
         </a>
         <!--  Fundamentals of Software Development -->
-        <a href="">
+        <a href="/public/it3/FSD.html">
             <div class="reccontent">
                 <img class="recimg" src="https://neo2708.github.io/pic.github.io/030.png" alt="" srcset="">
                 <div class="align">
@@ -223,6 +287,8 @@
             </div>
         </a>
     </div>
+    <!-- Footer -->
+
     <h1 class="foottext">@KhudKibook</h1>
 
 </body>
